--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.3.1",
+    "concurrently": "^6.3.0",
+    "css-loader": "^6.4.0",
     "json-server": "^0.17.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "sass-loader": "^12.2.0",
+    "style-loader": "^3.3.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
@@ -23,7 +28,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "api": "json-server --watch ./server/db.json --port 8000",
+    "startWithApi": "concurrently \"json-server --watch ./server/db.json --port 8000\" \"react-scripts start\""
   },
   "eslintConfig": {
     "extends": [
